<resources>
    <string name="app_name">Ryan App.[1.1]</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de Passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Se Connecter</string>
    <string name="welcome">Bienvenue</string>
    <string name="login_failed">Login/Mot de Passe non valide(s)!</string>
    <string name="btn_signin_txt">Se Connecter</string>

    <string name="btn_signup_txt">pas encore de compte?</string>
    <string name="btn_forgotten_txt">Mot de passe oublié?</string>

    <string name="title_activity_admin">Admin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_comptes">Comptes</string>
    <string name="title_interventions">Interventions</string>
    <string name="title_rapports">Rapports</string>

    <!--    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom">MainActivity</string>-->

    <string name="title_activity_supervisor">Superviseur</string>
    <string name="tab_text_1">Interventions</string>
    <string name="tab_text_2">Planification</string>

    <string name="user_profil_1">Admin.</string>
    <string name="user_profil_2">Supervieur</string>
    <string name="user_profil_3">Technicien</string>

    <string name="title_activity_technician">Technicien</string>
    <string name="title_options">Options</string>
    <string name="fp_title">Authentification par Empreinte Digitale</string>
    <string name="fp_text">Toucher le capteur</string>
    <string name="fp_cancel">Annuler</string>
    <string name="hint_title_client">Code Client</string>
    <string name="hint_title_desc">Description Intervention</string>
    <string name="hint_title_service_cible">Service (Equipement) Cible</string>

    <string name="hint_title_date_debut_prev">Date Début Prévue</string>
    <string name="hint_title_date_fin_prev">Date Fin Prévue</string>

    <string name="hint_title_date_debut_reel">Date Début</string>
    <string name="hint_title_heure_debut_reel">..Heure</string>

    <string name="hint_title_date_fin_reel">Date Fin</string>

    <string name="hint_title_comment">Consignes (intervention)</string>
    <string name="hint_title_obs">Observations (rapport)</string>

    <string name="btn_planif_txt">Planifier Intervention</string>
    <string name="search_txt">Search..</string>
    <string name="no_results_interv">Aucune Intervention</string>
    <string name="select_item_txt">Selectionner dans liste..</string>
    <string name="techn" />
    <string name="tech_assoc_txt">Technicien(s) (cliquer pour ajouter)</string>
    <string name="action_sign_out">Se Déconnecter</string>
    <string name="no_result_txt">Aucun Résultat</string>
    <string name="title_histo">Historique</string>
    <string name="tech_rapport_txt">Rapport Intervention</string>
    <string name="tech_interv_txt">Interventions</string>
    <string name="tech_histo_txt">Historique</string>
    <string name="no_interv_today">Aucune Intervention Aujourd\'hui</string>
    <string name="btn_rapport_save">Sauvegarder Rapport Intervention</string>
    <string name="hint_title_interv">Code Intervention</string>

    <string name="rapport_assoc_photos">Photos</string>
    <string name="hint_title_mat_necess">Matériel Nécessaire</string>
    <string name="btn_add_user">Ajouter Utilisateur</string>
    <string name="hint_code_user">Code Utilisateur</string>
    <string name="hint_firstname">Prénom</string>
    <string name="hint_lastname">Nom</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de Passe</string>
    <string name="search_detail_txt">Interventions : Filtrer</string>
    <string name="hint_supervisor_txt">Code Superviseur</string>
    <string name="tech_assoc_2_txt">Technicien(s) Affecté(s)</string>
    <string name="hint_search_debut_prev">Date Début Prévue</string>
    <string name="hint_search_debut_reel">Date Début Réelle</string>
    <string name="btn_filter_txt">Filtrer Interventions</string>
    <string name="title_clients">Clients</string>
    <string name="saisie_rapport_title">Saisir Rapport :</string>
    <string name="interv_status_title">Statut Intervention</string>
    <string name="btn_add_client">Ajouter Client</string>
    <string name="hint_code_client">Code Client</string>
    <string name="hint_nom_client">Nom Client</string>
    <string name="hint_contact_client">Nom Contact</string>
    <string name="hint_email_client">Email Client</string>
    <string name="hint_tel_client">Téléphone Client</string>
    <string name="hint_adress_client">Adresse Client</string>
    <string name="hint_cp_client">CP</string>
    <string name="hint_ville_client">Ville</string>
    <string name="forgotten_password_txt">Veuillez saisir votre adresse mail. Un mail vous sera envoyé pour réinitialiser votre mot de passe.</string>
    <string name="forgotten_password_title">Réinitialisation Mot de Passe</string>
    <string name="reset_password_btn">Réinitialiser Mot de Passe</string>
    <string name="hint_title_supervisor">Code Superviseur</string>
    <string name="change_password_title">Modification Mot de Passe</string>
    <string name="prompt_temp_password_hint">Mot de passe actuel</string>
    <string name="prompt_new_password_hint">Nouveau mot de passe</string>
    <string name="prompt_new_2_password_hint">Confirmation mot de passe</string>
    <string name="change_password_btn">Modifier Mot de Passe</string>


    <string-array name="statuts">
        <item>en attente</item>
        <item>en cours</item>
        <item>abandon</item>
        <item>à poursuivre</item>
        <item>terminée</item>
    </string-array>
    <string-array name="profils">
        <item>Administrateur</item>
        <item>Superviseur</item>
        <item>Technicien</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="btn_start_text">Commencer Intervention</string>
    <string name="btn_finish_text">Terminer Intervention</string>

    <string name="fingerprint_use_text">Utiliser empreinte digitale</string>
    <string name="fingerprint_config_text">Configurer empreinte digitale</string>
    <string name="hint_contrat_client">Contrat Client</string>
    <string name="hint_rapport_obs">Observations fin intervention</string>
    <string name="title_activity_show_in_map">Map</string>
    <string name="tab_text_3">Suivi &amp; Infos</string>
    <string name="tech_list_txt">Techniciens</string>
    <string name="tech_gps">Positions (gps)</string>
    <string name="tab_text_4">Statistiques</string>
    <string name="stats_txt">Statistiques</string>
    <string name="hint_msg">Message à envoyer..</string>
    <string name="msg_title">Mes Messages</string>
    <string name="action_show_msg">Message(s)</string>

    <string name="title_activity_settings">Réglages</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="btn_delete_txt">Suppression</string>
    <string name="btn_update_txt">Modification</string>
    <string name="btn_update_ok_txt">Valider</string>
    <string name="btn_update_cancel_txt">Annuler</string>
    <string name="btn_update_user">Modifier Compte</string>
    <string name="btn_update_client">Modifier Client</string>
    <string name="pdf_generate">Générer PDF</string>
    <string name="pdf_generate_txt">Générer PDF</string>
    <string name="btn_reset_txt">Effacer</string>
    <string name="btn_save_txt">Sauvegarder</string>
    <string name="signatures_txt">Signature(s)</string>

</resources>